# BasicSimWindow

./: CMakeLists.txt  README.md  main.cpp
character/: box.xml  ground.xml  humanoid.xml
render/: CMakeLists.txt  Camera.cpp  Camera.hpp  GLComplexFunctions.cpp  GLComplexFunctions.hpp  GLPrimitiveFunctions.cpp  GLPrimitiveFunctions.hpp  GLUTWindow.cpp  GLUTWindow.hpp  GLfunctions.cpp  GLfunctions.hpp  SimWindow.cpp  SimWindow.hpp  main.cpp
sim/: BVH.cpp  BVH.hpp  CMakeLists.txt  Character.cpp  Character.hpp  Functions.cpp  Functions.hpp  SkeletonBuilder.cpp  SkeletonBuilder.hpp
